Updating index.html with complete love letter website content

--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Letter</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .photo {
+            background-image: url('elida-hero.jpg');
+            height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
+        /* Add more styles as needed */
+    </style>
 </head>
 <body>
-    <div class="photo"></div>
-    <div class="content">
-        <h1>My Dearest Love</h1>
-        <p>This is a love letter dedicated to you...</p>
+    <div class="photo">
+        <h1>Welcome to My Love Letter</h1>
     </div>
+    <section id="letter">
+        <h2>My Letter</h2>
+        <p>Dear [Name],...</p>
+    </section>
+    <section id="gallery">
+        <h2>Gallery</h2>
+        <img src="photo1.jpg" alt="Photo 1">
+        <img src="photo2.jpg" alt="Photo 2">
+        <!-- More images -->
+    </section>
+    <section id="timeline">
+        <h2>Our Timeline</h2>
+        <ul>
+            <li>Event 1...</li>
+            <li>Event 2...</li>
+            <!-- More events -->
+        </ul>
+    </section>
+    <section id="promise">
+        <h2>My Promise</h2>
+        <p>My promise to you is...</p>
+    </section>
 </body>
 </html>
