Update index.html with new love letter content

--- a/index.html
+++ b/index.html
@@ -4,44 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Letter</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .photo {
-            background-image: url('elida-hero.jpg');
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-        }
-        /* Add more styles as needed */
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="photo">
-        <h1>Welcome to My Love Letter</h1>
-    </div>
-    <section id="letter">
-        <h2>My Letter</h2>
-        <p>Dear [Name],...</p>
-    </section>
-    <section id="gallery">
-        <h2>Gallery</h2>
-        <img src="photo1.jpg" alt="Photo 1">
-        <img src="photo2.jpg" alt="Photo 2">
-        <!-- More images -->
-    </section>
-    <section id="timeline">
-        <h2>Our Timeline</h2>
-        <ul>
-            <li>Event 1...</li>
-            <li>Event 2...</li>
-            <!-- More events -->
-        </ul>
-    </section>
-    <section id="promise">
-        <h2>My Promise</h2>
-        <p>My promise to you is...</p>
-    </section>
+    <header>
+        <h1>Love Letter</h1>
+    </header>
+    <main>
+        <section id="photo">
+            <img src="photo.jpg" alt="A photo representing love">
+        </section>
+        <section id="message">
+            <h2>Message</h2>
+            <p>My dearest love, every moment spent with you is a treasure that I hold close to my heart.</p>
+        </section>
+        <section id="quote">
+            <h2>Quote</h2>
+            <blockquote>
+                <p>"Love is composed of a single soul inhabiting two bodies." - Aristotle</p>
+            </blockquote>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 Your Name</p>
+    </footer>
 </body>
 </html>
